Fixing target filename capitalization
Minor formatting changes

Removing dead variables

Fixing install of qIgtlClient

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,43 +12,48 @@ set(OpenIGTLinkIO_VERSION_SUFFIX "")
 
 set(OpenIGTLinkIO_BINARY_INSTALL "bin")
 set(OpenIGTLinkIO_LIBRARY_INSTALL "lib")
-set(OpenIGTLinkIO_CMAKE_INSTALL "${OpenIGTLinkIO_LIBRARY_INSTALL}/igtlio/cmake")
+set(OpenIGTLinkIO_ARCHIVE_INSTALL "lib")
+set(OpenIGTLinkIO_CMAKE_INSTALL "${OpenIGTLinkIO_LIBRARY_INSTALL}/cmake")
 set(OpenIGTLinkIO_PACKAGE_INSTALL "${OpenIGTLinkIO_CMAKE_INSTALL}/igtlio${OpenIGTLinkIO_VERSION_SUFFIX}")
 set(OpenIGTLinkIO_INCLUDE_INSTALL "include/igtlio${OpenIGTLinkIO_VERSION_SUFFIX}")
 
-
+###########################################################
+# Find dependencies
 find_package(OpenIGTLink REQUIRED NO_MODULE)
 include(${OpenIGTLink_USE_FILE})
 
+###########################################################
+# Configuration
 if(NOT BUILD_SHARED_LIBS)
   set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared or static libs")
 endif()
 
 if(NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
-  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OpenIGTLinkIO_BINARY_INSTALL}")
 endif()
 
 if(NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
-  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OpenIGTLinkIO_LIBRARY_INSTALL}")
 endif()
 
 if(NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
-  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OpenIGTLinkIO_ARCHIVE_INSTALL}")
 endif()
 
-# Choose version of Qt
+###########################################################
+# Qt
 if(NOT IGTLIO_QT_VERSION)
   set(IGTLIO_QT_VERSION "5" CACHE STRING "Expected Qt version")
-  mark_as_advanced( IGTLIO_QT_VERSION )
+  mark_as_advanced( IGTLIO_QT_VERSION)
 endif()
 set_property(CACHE IGTLIO_QT_VERSION PROPERTY STRINGS 4 5)
 
 if(NOT (IGTLIO_QT_VERSION VERSION_EQUAL "4" OR IGTLIO_QT_VERSION VERSION_EQUAL "5"))
-    message(FATAL_ERROR "Expected value for IGTLIO_QT_VERSION is either '4' or '5'")
+  message(FATAL_ERROR "Expected value for IGTLIO_QT_VERSION is either '4' or '5'")
 endif()
 
-set (OpenIGTLinkIO_TARGETS igtlioLogic igtlioDevices igtlioConverter)
-set (OpenIGTLinkIO_INCLUDE_DIRS
+set(OpenIGTLinkIO_TARGETS igtlioLogic igtlioDevices igtlioConverter)
+set(OpenIGTLinkIO_INCLUDE_DIRS
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
   ${CMAKE_CURRENT_SOURCE_DIR}/Logic
@@ -77,34 +82,40 @@ export(TARGETS ${OpenIGTLinkIO_TARGETS}
   FILE "${CMAKE_BINARY_DIR}/OpenIGTLinkIOTargets.cmake"
   )
 
-set (OpenIGTLinkIO_LIBRARIES ${OpenIGTLinkIO_TARGETS})
-set (OpenIGTLinkIO_LIBRARY_DIRS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+set(OpenIGTLinkIO_LIBRARIES ${OpenIGTLinkIO_TARGETS})
+set(OpenIGTLinkIO_LIBRARY_DIRS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
+###########################################################
 # Generate Config file for BUILD_INTERFACE
-set(OpenIGTLinkIO_CONFIG_CODE "  SET(OpenIGTLinkIO_INCLUDE_DIRS \"${OpenIGTLinkIO_INCLUDE_DIRS}\")
-  SET(OpenIGTLinkIO_LIBRARY_DIRS \"${OpenIGTLinkIO_LIBRARY_DIRS}\")")
+set(OpenIGTLinkIO_CONFIG_CODE 
+  "set(OpenIGTLinkIO_INCLUDE_DIRS \"${OpenIGTLinkIO_INCLUDE_DIRS}\")
+set(OpenIGTLinkIO_LIBRARY_DIRS \"${OpenIGTLinkIO_LIBRARY_DIRS}\")")
 set(OpenIGTLinkIO_LIBRARY_TARGETS_FILE "${CMAKE_BINARY_DIR}/OpenIGTLinkIOTargets.cmake")
 configure_file(OpenIGTLinkIOConfig.cmake.in
   OpenIGTLinkIOConfig.cmake
   @ONLY
   )
 
-# Generate Config file for INSTALL_INTERFACE
+###########################################################
+# Generate config file for INSTALL_INTERFACE
 set(OpenIGTLinkIO_CONFIG_CODE [=[
-  get_filename_component(OpenIGTLinkIO_CMAKE_PACKAGE_DIR "${CMAKE_CURRENT_LIST_FILE}" DIRECTORY)
-  get_filename_component(OpenIGTLinkIO_INSTALL_PREFIX "${OpenIGTLinkIO_CMAKE_PACKAGE_DIR}" DIRECTORY)
-  get_filename_component(OpenIGTLinkIO_LIBRARY_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}" DIRECTORY)
-  get_filename_component(OpenIGTLinkIO_INSTALL_PREFIX "${OpenIGTLinkIO_LIBRARY_DIR}" DIRECTORY)
+get_filename_component(OpenIGTLinkIO_CMAKE_PACKAGE_DIR "${CMAKE_CURRENT_LIST_FILE}" DIRECTORY)
+get_filename_component(OpenIGTLinkIO_INSTALL_PREFIX "${OpenIGTLinkIO_CMAKE_PACKAGE_DIR}" DIRECTORY)
 
-  set(OpenIGTLinkIO_INCLUDE_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}/@OpenIGTLinkIO_INCLUDE_INSTALL@")
-  set(OpenIGTLinkIO_BINARY_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}/@OpenIGTLinkIO_BINARY_INSTALL@")
-  
-  set(OpenIGTLinkIO_INCLUDE_DIRS "${OpenIGTLinkIO_INCLUDE_DIR}" "${OpenIGTLinkIO_INCLUDE_DIR}/DeviceWidgets")
-  set(OpenIGTLinkIO_LIBRARY_DIRS "${OpenIGTLinkIO_BINARY_DIR} ${OpenIGTLinkIO_LIBRARY_DIR}")
-]=])
-string(REPLACE "@OpenIGTLinkIO_INCLUDE_INSTALL@" "${OpenIGTLinkIO_INCLUDE_INSTALL}" OpenIGTLinkIO_CONFIG_CODE ${OpenIGTLinkIO_CONFIG_CODE})
-string(REPLACE "@OpenIGTLinkIO_BINARY_INSTALL@" "${OpenIGTLinkIO_BINARY_INSTALL}" OpenIGTLinkIO_CONFIG_CODE ${OpenIGTLinkIO_CONFIG_CODE})
-set(OpenIGTLinkIO_LIBRARY_TARGETS_FILE "\${OpenIGTLinkIO_CMAKE_PACKAGE_DIR}/OpenIGTLinkIOTargets.cmake")
+set(OpenIGTLinkIO_INCLUDE_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}/@OpenIGTLinkIO_INCLUDE_INSTALL@")
+set(OpenIGTLinkIO_BINARY_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}/@OpenIGTLinkIO_BINARY_INSTALL@")
+set(OpenIGTLinkIO_LIBRARY_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}/@OpenIGTLinkIO_LIBRARY_INSTALL@")
+
+set(OpenIGTLinkIO_INCLUDE_DIRS "${OpenIGTLinkIO_INCLUDE_DIR}" "${OpenIGTLinkIO_INCLUDE_DIR}/DeviceWidgets")
+set(OpenIGTLinkIO_LIBRARY_DIRS "${OpenIGTLinkIO_BINARY_DIR} ${OpenIGTLinkIO_LIBRARY_DIR}")]=])
+
+string(REPLACE "@OpenIGTLinkIO_INCLUDE_INSTALL@" "${OpenIGTLinkIO_INCLUDE_INSTALL}" 
+  OpenIGTLinkIO_CONFIG_CODE ${OpenIGTLinkIO_CONFIG_CODE}
+ )
+string(REPLACE "@OpenIGTLinkIO_BINARY_INSTALL@" "${OpenIGTLinkIO_BINARY_INSTALL}" 
+  OpenIGTLinkIO_CONFIG_CODE ${OpenIGTLinkIO_CONFIG_CODE}
+ )
+set(OpenIGTLinkIO_LIBRARY_TARGETS_FILE "\${OpenIGTLinkIO_CMAKE_PACKAGE_DIR}/${OpenIGTLinkIO_PACKAGE_INSTALL}/OpenIGTLinkIOTargets.cmake")
 configure_file(OpenIGTLinkIOConfig.cmake.in
   install/OpenIGTLinkIOConfig.cmake
   @ONLY
@@ -112,13 +123,13 @@ configure_file(OpenIGTLinkIOConfig.cmake.in
 
 include(CTest)
 
-if (BUILD_TESTING)
+if(BUILD_TESTING)
   add_subdirectory(Testing)
 endif()
 
 install(EXPORT OpenIGTLinkIO
   DESTINATION "${OpenIGTLinkIO_PACKAGE_INSTALL}"
-  FILE "OpenIGTLINKIOTargets.cmake"
+  FILE "OpenIGTLinkIOTargets.cmake"
   )
 
 install(FILES ${CMAKE_BINARY_DIR}/install/OpenIGTLinkIOConfig.cmake
