--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,26 +8,39 @@ endif()
 project(OpenIGTLinkIO)
 ###########################################################
 
+set(OpenIGTLinkIO_VERSION_SUFFIX "") # add a version suffix for parallel multi-version install
+
+set(OpenIGTLinkIO_BINARY_INSTALL "bin")
+set(OpenIGTLinkIO_LIBRARY_INSTALL "lib")
+set(OpenIGTLinkIO_CMAKE_INSTALL "${OpenIGTLinkIO_LIBRARY_INSTALL}/cmake")
+set(OpenIGTLinkIO_PACKAGE_INSTALL "${OpenIGTLinkIO_CMAKE_INSTALL}/igtlio${OpenIGTLinkIO_VERSION_SUFFIX}")
+set(OpenIGTLinkIO_INCLUDE_INSTALL "include/igtlio${OpenIGTLinkIO_VERSION_SUFFIX}")
+
+###########################################################
+# Find dependencies
 find_package(OpenIGTLink REQUIRED NO_MODULE)
 include(${OpenIGTLink_USE_FILE})
 
+###########################################################
+# Configuration
 if(NOT BUILD_SHARED_LIBS)
   set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared or static libs")
 endif()
 
 if(NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
-  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OpenIGTLinkIO_BINARY_INSTALL}")
 endif()
 
 if(NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
-  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OpenIGTLinkIO_LIBRARY_INSTALL}")
 endif()
 
 if(NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
-  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${OpenIGTLinkIO_ARCHIVE_INSTALL}")
 endif()
 
-# Choose version of Qt
+###########################################################
+# Qt
 if(NOT IGTLIO_QT_VERSION)
   set(IGTLIO_QT_VERSION "5" CACHE STRING "Expected Qt version")
   mark_as_advanced( IGTLIO_QT_VERSION )
@@ -52,6 +65,7 @@ add_subdirectory(Devices)
 add_subdirectory(Logic)
 
 option(IGTLIO_USE_GUI "Build IGTLIO with an user interface" ON)
+set(OpenIGTLinkIO_Qt_CONFIG_CODE "")
 if (${IGTLIO_USE_GUI})
   add_subdirectory(GUI)
   list (APPEND OpenIGTLinkIO_TARGETS igtlioGUI)
@@ -70,19 +84,58 @@ export(TARGETS ${OpenIGTLinkIO_TARGETS}
 set (OpenIGTLinkIO_LIBRARIES ${OpenIGTLinkIO_TARGETS})
 set (OpenIGTLinkIO_LIBRARY_DIRS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
-if(IGTLIO_USE_GUI AND IGTLIO_QT_VERSION EQUAL "5" AND NOT Qt5_DIR)
-  # Sometimes Qt5_DIR is not populated
-  get_filename_component(Qt5_DIR ${Qt5Core_DIR} DIRECTORY)
-  set(Qt5_DIR ${Qt5_DIR}/Qt5)
-endif()
-
+###########################################################
+# Generate Config file for BUILD_INTERFACE
+set(OpenIGTLinkIO_CONFIG_CODE 
+  "set(OpenIGTLinkIO_INCLUDE_DIRS \"${OpenIGTLinkIO_INCLUDE_DIRS}\")
+set(OpenIGTLinkIO_LIBRARY_DIRS \"${OpenIGTLinkIO_LIBRARY_DIRS}\")")
+set(OpenIGTLinkIO_LIBRARY_TARGETS_FILE "${CMAKE_BINARY_DIR}/OpenIGTLinkIOTargets.cmake")
 configure_file(OpenIGTLinkIOConfig.cmake.in
   OpenIGTLinkIOConfig.cmake
   @ONLY
   )
 
+###########################################################
+# Generate config file for INSTALL_INTERFACE
+set(OpenIGTLinkIO_CONFIG_CODE [=[
+get_filename_component(OpenIGTLinkIO_CMAKE_PACKAGE_DIR "${CMAKE_CURRENT_LIST_FILE}" DIRECTORY)       # <prefix>/lib/cmake/igtlio
+get_filename_component(_TEMP_DIRECTORY "${OpenIGTLinkIO_CMAKE_PACKAGE_DIR}" DIRECTORY)               # <prefix>/lib/cmake
+get_filename_component(OpenIGTLinkIO_LIBRARY_DIR "${_TEMP_DIRECTORY}" DIRECTORY)                     # <prefix>/lib
+get_filename_component(OpenIGTLinkIO_INSTALL_PREFIX "${OpenIGTLinkIO_LIBRARY_DIR}" DIRECTORY)        # <prefix>
+  
+set(OpenIGTLinkIO_INCLUDE_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}/@OpenIGTLinkIO_INCLUDE_INSTALL@")
+set(OpenIGTLinkIO_BINARY_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}/@OpenIGTLinkIO_BINARY_INSTALL@")
+set(OpenIGTLinkIO_LIBRARY_DIR "${OpenIGTLinkIO_INSTALL_PREFIX}/@OpenIGTLinkIO_LIBRARY_INSTALL@")
+  
+set(OpenIGTLinkIO_INCLUDE_DIRS "${OpenIGTLinkIO_INCLUDE_DIR}" "${OpenIGTLinkIO_INCLUDE_DIR}/DeviceWidgets")
+set(OpenIGTLinkIO_LIBRARY_DIRS "${OpenIGTLinkIO_BINARY_DIR} ${OpenIGTLinkIO_LIBRARY_DIR}")]=])
+
+string(REPLACE "@OpenIGTLinkIO_INCLUDE_INSTALL@" "${OpenIGTLinkIO_INCLUDE_INSTALL}" 
+  OpenIGTLinkIO_CONFIG_CODE ${OpenIGTLinkIO_CONFIG_CODE}
+  )
+string(REPLACE "@OpenIGTLinkIO_BINARY_INSTALL@" "${OpenIGTLinkIO_BINARY_INSTALL}" 
+  OpenIGTLinkIO_CONFIG_CODE ${OpenIGTLinkIO_CONFIG_CODE}
+  )
+string(REPLACE "@OpenIGTLinkIO_LIBRARY_INSTALL@" "${OpenIGTLinkIO_LIBRARY_INSTALL}" 
+  OpenIGTLinkIO_CONFIG_CODE ${OpenIGTLinkIO_CONFIG_CODE}
+  )
+set(OpenIGTLinkIO_LIBRARY_TARGETS_FILE "\${OpenIGTLinkIO_CMAKE_PACKAGE_DIR}/OpenIGTLinkIOTargets.cmake")
+configure_file(OpenIGTLinkIOConfig.cmake.in
+  CMakeFiles/install/OpenIGTLinkIOConfig.cmake
+  @ONLY
+  )
+
 include(CTest)
 
-if (BUILD_TESTING)
+if(BUILD_TESTING)
   add_subdirectory(Testing)
 endif()
+
+install(EXPORT OpenIGTLinkIO
+  DESTINATION "${OpenIGTLinkIO_PACKAGE_INSTALL}"
+  FILE "OpenIGTLinkIOTargets.cmake"
+  )
+
+install(FILES ${CMAKE_BINARY_DIR}/CMakeFiles/install/OpenIGTLinkIOConfig.cmake
+  DESTINATION "${OpenIGTLinkIO_PACKAGE_INSTALL}"
+  )
