--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -14,8 +14,9 @@ include(${VTK_USE_FILE})
 
 set(${KIT}_INCLUDE_DIRECTORIES
   PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${CMAKE_CURRENT_BINARY_DIR}
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+  $<INSTALL_INTERFACE:${OpenIGTLinkIO_INCLUDE_INSTALL}>
   )
 
 set(${KIT}_SRCS
@@ -27,15 +28,32 @@ set(${KIT}_SRCS
   igtlCommandConverter.cxx
   )
 
+set(${KIT}_HDRS
+  igtlBaseConverter.h
+  igtlImageConverter.h
+  igtlPolyDataConverter.h
+  igtlStatusConverter.h
+  igtlTransformConverter.h
+  igtlCommandConverter.h
+  )
+
 set(${KIT}_TARGET_LIBRARIES
   ${OpenIGTLink_LIBRARIES}
   ${VTK_LIBRARIES}
   )
 
-add_library(${KIT} ${${KIT}_SRCS})
+add_library(${KIT} ${${KIT}_SRCS} ${${KIT}_HDRS})
 target_link_libraries(${KIT} PUBLIC ${${KIT}_TARGET_LIBRARIES})
 target_include_directories(${KIT} ${${KIT}_INCLUDE_DIRECTORIES})
 
-include( GenerateExportHeader )
-generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h EXPORT_MACRO_NAME ${${KIT}_EXPORT_DIRECTIVE} )
+include(GenerateExportHeader)
+generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h 
+  EXPORT_MACRO_NAME ${${KIT}_EXPORT_DIRECTIVE} 
+  )
 
+INSTALL(TARGETS ${KIT} EXPORT OpenIGTLinkIO 
+  RUNTIME DESTINATION "${OpenIGTLinkIO_BINARY_INSTALL}"
+  LIBRARY ARCHIVE DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  )
+
+INSTALL(FILES ${${KIT}_HDRS} "${CMAKE_CURRENT_BINARY_DIR}/${KIT}Export.h" DESTINATION "${OpenIGTLinkIO_INCLUDE_INSTALL}")
