--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -14,20 +14,24 @@ include(${VTK_USE_FILE})
 
 set(${KIT}_INCLUDE_DIRECTORIES
   PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${CMAKE_CURRENT_BINARY_DIR}
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+  $<INSTALL_INTERFACE:${OpenIGTLinkIO_INCLUDE_INSTALL}>
   )
 
 set(${KIT}_SRCS
   vtkIGTLIODevice.cxx
-  vtkIGTLIODevice.h
   vtkIGTLIOImageDevice.cxx
-  vtkIGTLIOImageDevice.h
   vtkIGTLIOStatusDevice.cxx
-  vtkIGTLIOStatusDevice.h
   vtkIGTLIOCommandDevice.cxx
-  vtkIGTLIOCommandDevice.h
   vtkIGTLIOTransformDevice.cxx
+  )
+
+set(${KIT}_HDRS
+  vtkIGTLIODevice.h
+  vtkIGTLIOImageDevice.h
+  vtkIGTLIOStatusDevice.h
+  vtkIGTLIOCommandDevice.h
   vtkIGTLIOTransformDevice.h
   )
 
@@ -37,10 +41,18 @@ set(${KIT}_TARGET_LIBRARIES
   ${VTK_LIBRARIES}
   )
 
-add_library(${KIT} ${${KIT}_SRCS})
+add_library(${KIT} ${${KIT}_SRCS} ${${KIT}_HDRS})
 target_link_libraries(${KIT} ${${KIT}_TARGET_LIBRARIES})
 target_include_directories(${KIT} ${${KIT}_INCLUDE_DIRECTORIES})
 
-include( GenerateExportHeader )
-generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h EXPORT_MACRO_NAME ${${KIT}_EXPORT_DIRECTIVE} )
+include(GenerateExportHeader)
+generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h 
+  EXPORT_MACRO_NAME ${${KIT}_EXPORT_DIRECTIVE} 
+  )
 
+INSTALL(TARGETS ${KIT} EXPORT OpenIGTLinkIO 
+  RUNTIME DESTINATION "${OpenIGTLinkIO_BINARY_INSTALL}"
+  LIBRARY ARCHIVE DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  )
+
+INSTALL(FILES ${${KIT}_HDRS} "${CMAKE_CURRENT_BINARY_DIR}/${KIT}Export.h" DESTINATION "${OpenIGTLinkIO_INCLUDE_INSTALL}")
