--- a/OpenIGTLinkIOConfig.cmake.in
+++ b/OpenIGTLinkIOConfig.cmake.in
@@ -1,26 +1,24 @@
-SET(OpenIGTLink_DIR "@OpenIGTLink_DIR@")
-FIND_PACKAGE(OpenIGTLink REQUIRED NO_MODULE)
-IF(EXISTS ${OpenIGTLink_USE_FILE})
-  INCLUDE(${OpenIGTLink_USE_FILE})
-ENDIF()
+if(NOT OpenIGTLink_FOUND)
+  set(OpenIGTLink_DIR "@OpenIGTLink_DIR@")
+  find_package(OpenIGTLink REQUIRED NO_MODULE)
+else()
+  if(NOT "@OpenIGTLink_VERSION_MAJOR@.@OpenIGTLink_VERSION_MINOR@.@OpenIGTLink_VERSION_PATCH@" VERSION_EQUAL "${OpenIGTLink_VERSION_MAJOR}.${OpenIGTLink_VERSION_MINOR}.${OpenIGTLink_VERSION_PATCH}")
+    message(SEND_ERROR "Different versions in OpenIGTLinkIO (@OpenIGTLink_VERSION_MAJOR@.@OpenIGTLink_VERSION_MINOR@.@OpenIGTLink_VERSION_PATCH@) and referencing project (${OpenIGTLink_VERSION_MAJOR}.${OpenIGTLink_VERSION_MINOR}.${OpenIGTLink_VERSION_PATCH}). Issues may arise.")
+  endif()
+endif()
 
-INCLUDE("@CMAKE_BINARY_DIR@/OpenIGTLinkIOTargets.cmake")
+if(EXISTS ${OpenIGTLink_USE_FILE})
+  include(${OpenIGTLink_USE_FILE})
+endif()
+
+@OpenIGTLinkIO_CONFIG_CODE@
+
+include("@OpenIGTLinkIO_LIBRARY_TARGETS_FILE@")
 
 # Enable support for old style include/linking
 # It is highly recommended to link to target names, thus 
 #    includes/linking are handled automatically
 SET(OpenIGTLinkIO_FOUND 1)
-SET(OpenIGTLinkIO_INCLUDE_DIRS "@OpenIGTLinkIO_INCLUDE_DIRS@")
-SET(OpenIGTLinkIO_LIBRARY_DIRS "@OpenIGTLinkIO_LIBRARY_DIRS@")
 SET(OpenIGTLinkIO_LIBRARIES "@OpenIGTLinkIO_LIBRARIES@")
 
-IF(@IGTLIO_USE_GUI@)
-  SET(IGTLIO_QT_VERSION "@IGTLIO_QT_VERSION@")
-  IF(IGTLIO_QT_VERSION EQUAL "5")
-    SET(Qt5_DIR "@Qt5_DIR@")
-    FIND_PACKAGE(Qt5 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED)
-  ELSEIF(IGTLIO_QT_VERSION EQUAL "4")
-    SET(QT_QMAKE_EXECUTABLE "@QT_QMAKE_EXECUTABLE@")
-    FIND_PACKAGE(Qt4 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED)
-  ENDIF()
-ENDIF()
+@OpenIGTLinkIO_Qt_CONFIG_CODE@
