--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -53,7 +53,8 @@ generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h
 
 INSTALL(TARGETS ${KIT} EXPORT OpenIGTLinkIO 
   RUNTIME DESTINATION "${OpenIGTLinkIO_BINARY_INSTALL}"
-  LIBRARY ARCHIVE DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  LIBRARY DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  ARCHIVE DESTINATION "${OpenIGTLinkIO_ARCHIVE_INSTALL}"
   )
 
 INSTALL(FILES ${${KIT}_HDRS} "${CMAKE_CURRENT_BINARY_DIR}/${KIT}Export.h" DESTINATION "${OpenIGTLinkIO_INCLUDE_INSTALL}")
