--- a/Examples/qIgtlClient/CMakeLists.txt
+++ b/Examples/qIgtlClient/CMakeLists.txt
@@ -37,5 +37,6 @@ target_link_libraries( ${PROJECT_NAME}
 
 INSTALL(TARGETS ${PROJECT_NAME} EXPORT OpenIGTLinkIO 
   RUNTIME DESTINATION "${OpenIGTLinkIO_BINARY_INSTALL}"
-  LIBRARY ARCHIVE DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  LIBRARY DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  ARCHIVE DESTINATION "${OpenIGTLinkIO_ARCHIVE_INSTALL}"
   )
