--- a/GUI/CMakeLists.txt
+++ b/GUI/CMakeLists.txt
@@ -171,7 +171,8 @@ generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h
 
 install(TARGETS ${KIT} EXPORT OpenIGTLinkIO 
   RUNTIME DESTINATION "${OpenIGTLinkIO_BINARY_INSTALL}"
-  LIBRARY ARCHIVE DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  LIBRARY DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
+  ARCHIVE DESTINATION "${OpenIGTLinkIO_ARCHIVE_INSTALL}"
   )
 
 # Install DeviceWidget file to subfolder
