--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -1,25 +1,21 @@
 project(igtlioConverter)
 
-set(KIT "${PROJECT_NAME}")
-
-set(${KIT}_EXPORT_DIRECTIVE "OPENIGTLINKIO_CONVERTER_EXPORT")
+set(${PROJECT_NAME}_EXPORT_DIRECTIVE "OPENIGTLINKIO_CONVERTER_EXPORT")
     
-find_package(VTK
+find_package(VTK REQUIRED NO_MODULE
   COMPONENTS
-  vtkIOImage
-  vtkImagingMath
-  REQUIRED
-  NO_MODULE)
+    vtkIOImage
+    vtkImagingMath
+  )
 include(${VTK_USE_FILE})
 
-set(${KIT}_INCLUDE_DIRECTORIES
-  PUBLIC
+set(${PROJECT_NAME}_INCLUDE_DIRECTORIES PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
   $<INSTALL_INTERFACE:${OpenIGTLinkIO_INCLUDE_INSTALL}>
   )
 
-set(${KIT}_SRCS
+set(${PROJECT_NAME}_SRCS
   igtlBaseConverter.cxx
   igtlImageConverter.cxx
   igtlPolyDataConverter.cxx
@@ -28,7 +24,7 @@ set(${KIT}_SRCS
   igtlCommandConverter.cxx
   )
 
-set(${KIT}_HDRS
+set(${PROJECT_NAME}_HDRS
   igtlBaseConverter.h
   igtlImageConverter.h
   igtlPolyDataConverter.h
@@ -37,24 +33,21 @@ set(${KIT}_HDRS
   igtlCommandConverter.h
   )
 
-set(${KIT}_TARGET_LIBRARIES
+set(${PROJECT_NAME}_TARGET_LIBRARIES
   ${OpenIGTLink_LIBRARIES}
   ${VTK_LIBRARIES}
   )
 
-add_library(${KIT} ${${KIT}_SRCS} ${${KIT}_HDRS})
-target_link_libraries(${KIT} PUBLIC ${${KIT}_TARGET_LIBRARIES})
-target_include_directories(${KIT} ${${KIT}_INCLUDE_DIRECTORIES})
+add_library(${PROJECT_NAME} ${${PROJECT_NAME}_SRCS} ${${PROJECT_NAME}_HDRS})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${${PROJECT_NAME}_TARGET_LIBRARIES})
+target_include_directories(${PROJECT_NAME} ${${PROJECT_NAME}_INCLUDE_DIRECTORIES})
 
-include(GenerateExportHeader)
-generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h 
-  EXPORT_MACRO_NAME ${${KIT}_EXPORT_DIRECTIVE} 
+generate_export_header(${PROJECT_NAME} EXPORT_FILE_NAME ${PROJECT_NAME}Export.h EXPORT_MACRO_NAME ${${PROJECT_NAME}_EXPORT_DIRECTIVE})
+
+INSTALL(TARGETS ${PROJECT_NAME} EXPORT OpenIGTLinkIO 
+  RUNTIME DESTINATION "${OpenIGTLinkIO_BINARY_INSTALL}" COMPONENT RuntimeLibraries
+  LIBRARY DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}" COMPONENT RuntimeLibraries
+  ARCHIVE DESTINATION "${OpenIGTLinkIO_ARCHIVE_INSTALL}" COMPONENT Development
   )
 
-INSTALL(TARGETS ${KIT} EXPORT OpenIGTLinkIO 
-  RUNTIME DESTINATION "${OpenIGTLinkIO_BINARY_INSTALL}"
-  LIBRARY DESTINATION "${OpenIGTLinkIO_LIBRARY_INSTALL}"
-  ARCHIVE DESTINATION "${OpenIGTLinkIO_ARCHIVE_INSTALL}"
-  )
-
-INSTALL(FILES ${${KIT}_HDRS} "${CMAKE_CURRENT_BINARY_DIR}/${KIT}Export.h" DESTINATION "${OpenIGTLinkIO_INCLUDE_INSTALL}")
+INSTALL(FILES ${${PROJECT_NAME}_HDRS} "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Export.h" DESTINATION "${OpenIGTLinkIO_INCLUDE_INSTALL}" COMPONENT Includes)
