Added a StringConverter and a StringDevice.

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -22,6 +22,7 @@ set(${PROJECT_NAME}_SRCS
   igtlioStatusConverter.cxx
   igtlioTransformConverter.cxx
   igtlioCommandConverter.cxx
+  igtlioStringConverter.cxx
   )
 
 set(${PROJECT_NAME}_HDRS
@@ -30,7 +31,7 @@ set(${PROJECT_NAME}_HDRS
   igtlioPolyDataConverter.h
   igtlioStatusConverter.h
   igtlioTransformConverter.h
-  igtlioCommandConverter.h
+  igtlioStringConverter.h
   )
 
 set(${PROJECT_NAME}_TARGET_LIBRARIES
