EHN:When the content of a device is modified, it should invoke a custum modified event too. This event could be very helpful in some situations, for example, to notified a PushNode action only when content changes. Without a custum modified event, any device modified could trigger a pushNode action, which is not desired.

--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -28,6 +28,7 @@ set(${PROJECT_NAME}_HDRS
   igtlioImageDevice.h
   igtlioStatusDevice.h
   igtlioCommandDevice.h
+  igtlioTransformDevice.h
   )
 
 set(${PROJECT_NAME}_TARGET_LIBRARIES
