EHN: Video Device class added.

--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -17,6 +17,7 @@ set(${PROJECT_NAME}_INCLUDE_DIRECTORIES PUBLIC
 
 set(${PROJECT_NAME}_SRCS
   igtlioDevice.cxx
+  igtlioVideoDevice.cxx
   igtlioImageDevice.cxx
   igtlioStatusDevice.cxx
   igtlioCommandDevice.cxx
@@ -25,6 +26,7 @@ set(${PROJECT_NAME}_SRCS
 
 set(${PROJECT_NAME}_HDRS
   igtlioDevice.h
+  igtlioVideoDevice.h
   igtlioImageDevice.h
   igtlioStatusDevice.h
   igtlioCommandDevice.h
