Various adjustments to hook command messages into Ibis and build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,13 +71,14 @@ if(NOT (IGTLIO_QT_VERSION VERSION_EQUAL "4" OR IGTLIO_QT_VERSION VERSION_EQUAL "
     message(FATAL_ERROR "Expected value for IGTLIO_QT_VERSION is either '4' or '5'")
 endif()
 
-set (OpenIGTLinkIO_TARGETS igtlioLogic igtlioDevices igtlioConverter)
+set (OpenIGTLinkIO_TARGETS igtlioLogic igtlioDevices igtlioConverter igtlioTools )
 set (OpenIGTLinkIO_INCLUDE_DIRS
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
   ${CMAKE_CURRENT_SOURCE_DIR}/Logic
   ${CMAKE_CURRENT_SOURCE_DIR}/Converter
   ${CMAKE_CURRENT_SOURCE_DIR}/Devices
+  ${CMAKE_CURRENT_SOURCE_DIR}/Tools
   )
 
 add_subdirectory(Converter)
