CX-114: Replaced ugly code for enabling C++11.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,19 +9,7 @@ project(OpenIGTLinkIO)
 ###########################################################
 
 #### Enable C++11
-# Note that Microsoft Visual C++ compiler enables C++11 by default
-if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
-    include(CheckCXXCompilerFlag)
-    check_cxx_compiler_flag(--std=c++11 SUPPORTS_STD_CXX11)
-    check_cxx_compiler_flag(--std=c++0x SUPPORTS_STD_CXX01)
-    if(SUPPORTS_STD_CXX11)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")
-    elseif(SUPPORTS_STD_CXX01)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
-    else()
-        message(ERROR "Compiler does not support --std=c++11 or --std=c++0x.")
-    endif()
-endif()
+set (CMAKE_CXX_STANDARD 11)
 
 set(OpenIGTLinkIO_VERSION_SUFFIX "") # add a version suffix for parallel multi-version install
 
