--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -22,6 +22,7 @@ set(${PROJECT_NAME}_SRCS
   igtlioStatusDevice.cxx
   igtlioCommandDevice.cxx
   igtlioTransformDevice.cxx
+  igtlioPolyDataDevice.cxx
   )
 
 set(${PROJECT_NAME}_HDRS
