--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -48,4 +48,6 @@ add_io_test("testSendReceiveCommand" testSendReceiveCommand testSendReceiveComma
 add_io_test("testDeduceToolBasedOnName" testDeduceToolBasedOnName testDeduceToolBasedOnName.cxx)
 add_io_test("testCommandMessageCodec" testCommandMessageCodec testCommandMessageCodec.cxx)
 add_io_test("testSendReceiveCommandWidthCodec" testSendReceiveCommandWidthCodec testSendReceiveCommandWidthCodec.cxx)
-#add_io_test("testReceiveVideo" testReceiveVideo testReceiveVideo.cxx)
+IF(USE_H264 OR USE_VP9 OR (USE_X265 AND USE_OpenHEVC))
+  add_io_test("testReceiveVideo" testReceiveVideo testReceiveVideo.cxx)
+ENDIF()
