--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -35,7 +35,7 @@ set(${PROJECT_NAME}_HDRS
   igtlioPolyDataDevice.h
   )
 
-IF(USE_H264 OR USE_VP9 OR USE_X265 OR USE_OpenHEVC)
+IF(OpenIGTLink_ENABLE_VIDEOSTREAMING)
   LIST(APPEND ${PROJECT_NAME}_SRCS
   igtlioVideoDevice.cxx
   )
