Fixed a configuration problem on Linux where the Qt5::Extras target needs to be defined in the base directory for CMake to generate makefile/project properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,9 @@ set(OpenIGTLinkIO_Qt_CONFIG_CODE "")
 if (${IGTLIO_USE_GUI})
   add_subdirectory(GUI)
   list (APPEND OpenIGTLinkIO_TARGETS igtlioGUI)
+  if(UNIX AND NOT APPLE)
+    find_package(Qt5 COMPONENTS X11Extras REQUIRED)
+  endif()
 endif()
 
 option(IGTLIO_USE_EXAMPLES "Build IGTLIO examples" ON)
