Added comment to highlight the hack is needed because of vtk.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,9 +84,11 @@ set(OpenIGTLinkIO_Qt_CONFIG_CODE "")
 if (${IGTLIO_USE_GUI})
   add_subdirectory(GUI)
   list (APPEND OpenIGTLinkIO_TARGETS igtlioGUI)
-  # CMake is not able to generate the makefile on linux if the 
+  # CMake is not able to generate the makefile on Linux if the 
   # target Qt5::X11Extras is not defined in this directory
-  # when IGTLIO_USE_GUI is ON.
+  # when IGTLIO_USE_GUI is ON. The fix is necessary because
+  # X11Extras is a private dependency of vtk at least 
+  # until vtk-8.1 and maybe later.
   if(UNIX AND NOT APPLE)
     find_package(Qt5 COMPONENTS X11Extras REQUIRED)
   endif()
